force-app/main/default/objects/Question_Bank__c/Question_Bank__c.object-meta.xml
<CustomObject>
    <description>The Question Bank Object will store all questions used in the form tool for registrations.  The Registration Question Object and Follow-Up Question Object will pull questions from the bank.</description>
    <label>Question Bank</label>
    <nameField>
        <displayFormat>QID-{0000}</displayFormat>
        <label>Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Bank</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>