force-app/main/default/objects/Question_Bank__c/fields/Button_Text__c.field-meta.xml
<CustomField>
    <fullName>Button_Text__c</fullName>
    <inlineHelpText>Enter the value to be displayed on the button text for complex questions</inlineHelpText>
    <label>Button Text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>