force-app/main/default/objects/Question_Bank__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <inlineHelpText>Enter the values for the picklist to be displayed for this question type. Values should be delimited by a semicolon (;) character.</inlineHelpText>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>