force-app/main/default/objects/Question_Bank__c/fields/Short_Text__c.field-meta.xml
<CustomField>
    <fullName>Short_Text__c</fullName>
    <inlineHelpText>Enter a short text of the question or the first 255 characters of the actual question text will be displayed.</inlineHelpText>
    <label>Short Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>