force-app/main/default/objects/Question_Bank__c/fields/Stop_Auto_Renew_Value__c.field-meta.xml
<CustomField>
    <fullName>Stop_Auto_Renew_Value__c</fullName>
    <inlineHelpText>If this question should stop an auto-renewal from taking place if an answer is given of a certain value, enter the value that should stop the auto-renewal in this field.</inlineHelpText>
    <label>Stop Auto-Renew Value</label>
    <length>5</length>
    <type>Text</type>
</CustomField>