force-app/main/default/objects/Question_Bank__c/recordTypes/Complex.recordType-meta.xml
<RecordType>
    <fullName>Complex</fullName>
    <active>true</active>
    <label>Complex</label>
</RecordType>