force-app/main/default/objects/Question_Bank__c/validationRules/Require_button_text_for_complex.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_button_text_for_complex</fullName>
    <active>true</active>
    <description>requires the user to enter the button text field for complex questions so that the button can be created properly.</description>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Complex&#39; &amp;&amp; ISBLANK ( Button_Text__c  )</errorConditionFormula>
    <errorMessage>Please enter button text</errorMessage>
</ValidationRule>