force-app/main/default/objects/Question_Bank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Question_Text__c</columns>
    <columns>Answer_Type__c</columns>
    <columns>Controlling_Question__c</columns>
    <columns>Follow_up_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>